feat : add ai routes in client
