# src/codegen/model/aiCreate200Response.ts
@@ -1,0 +1,55 @@
+/**
+ * Leekwars
+ * Leekwars backend api
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { RequestFile } from './models';
+
+export class AiCreate200Response {
+    'id'?: number;
+    'name'?: string;
+    'level'?: number;
+    'code'?: string;
+    'folder'?: number;
+
+    static discriminator: string | undefined = undefined;
+
+    static attributeTypeMap: Array<{name: string, baseName: string, type: string}> = [
+        {
+            "name": "id",
+            "baseName": "id",
+            "type": "number"
+        },
+        {
+            "name": "name",
+            "baseName": "name",
+            "type": "string"
+        },
+        {
+            "name": "level",
+            "baseName": "level",
+            "type": "number"
+        },
+        {
+            "name": "code",
+            "baseName": "code",
+            "type": "string"
+        },
+        {
+            "name": "folder",
+            "baseName": "folder",
+            "type": "number"
+        }    ];
+
+    static getAttributeTypeMap() {
+        return AiCreate200Response.attributeTypeMap;
+    }
+}
+
