# src/codegen/model/aiSave200Response.ts
@@ -1,0 +1,34 @@
+/**
+ * Leekwars
+ * Leekwars backend api
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { RequestFile } from './models';
+
+export class AiSave200Response {
+    /**
+    * timestamp
+    */
+    'modified'?: number;
+
+    static discriminator: string | undefined = undefined;
+
+    static attributeTypeMap: Array<{name: string, baseName: string, type: string}> = [
+        {
+            "name": "modified",
+            "baseName": "modified",
+            "type": "number"
+        }    ];
+
+    static getAttributeTypeMap() {
+        return AiSave200Response.attributeTypeMap;
+    }
+}
+
