# src/codegen/model/aicode.ts
@@ -1,0 +1,49 @@
+/**
+ * Leekwars
+ * Leekwars backend api
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { RequestFile } from './models';
+
+/**
+* AI code
+*/
+export class Aicode {
+    'id': number;
+    /**
+    * timestamp
+    */
+    'modified': number;
+    'code': string;
+
+    static discriminator: string | undefined = undefined;
+
+    static attributeTypeMap: Array<{name: string, baseName: string, type: string}> = [
+        {
+            "name": "id",
+            "baseName": "id",
+            "type": "number"
+        },
+        {
+            "name": "modified",
+            "baseName": "modified",
+            "type": "number"
+        },
+        {
+            "name": "code",
+            "baseName": "code",
+            "type": "string"
+        }    ];
+
+    static getAttributeTypeMap() {
+        return Aicode.attributeTypeMap;
+    }
+}
+
